# metal-cpp-demo

./: CMakeLists.txt  README.md
try/: main.cpp  metal_adder.hpp
try.xcodeproj/: project.pbxproj
try.xcodeproj/xcuserdata/moritzhof.xcuserdatad/xcschemes/: xcschememanagement.plist
vector_addition/: add.metal  main.cpp  metal_adder.cpp
vector_addition.xcodeproj/: project.pbxproj
vector_addition.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
